--- a/films/ark.html
+++ b/films/ark.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>Films - Ark</title>
+    <title>ARK Part I: The Trustfall</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">Ark</span>
+                <span class="slider-title">ARK Part I: The Trustfall</span>
                 <p class="slider-text">
                     A young couple is trying to repair their relationship, while the mother is going through postpartum depression, slowly turning into psychosis.
                 </p>
@@ -50,7 +50,7 @@
         </div>      
         <div class="slider-content">
             <section class="slider_container">
-                <section class="slider">
+                <section class="slider-12">
                     <div class="slide">
                         <img src="../images/ARK/1.png" alt="">
                     </div>
