--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>Films - La Burbuja del Bebé</title>
+    <title>La Burbuja del Bebé</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -51,7 +51,7 @@
         </div>      
         <div class="slider-content">
             <section class="slider_container">
-                <section class="slider">
+                <section class="slider-10">
                     <div class="slide">
                         <img src="../images/la_burbuja_del_bebe/1.jpg" alt="">
                     </div>
