--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>Films - Ivan Marković - Cinematographer</title>
+    <title>Ivan Marković - Cinematographer</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -95,7 +95,7 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Ark</span>
+                                <span class="font-weight-bold movie-title">ARK</span>
                             </p>
                         </div>
                         <div class="col-md">
