added different logos

--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -42,9 +42,9 @@
                 <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo" src="../images/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo" src="../images/sae.png" alt="SAE" />
-                    <img  class="slider-logo" src="../images/fetén.png" alt="FETEN" />
+                    <img  class="slider-logo" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
+                    <img  class="slider-logo" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
+                    <img  class="slider-logo" src="../images/logos 5c5c5c/fetén.png" alt="FETEN" />
                 </div>  
             </div>
                    
