--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Lucas Snijder  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Danil Hoek, Monika Valkunaite, Vesna Kuzmic</span>
+                                <span class="letter-space show-hover">Jaynit Parmar  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Carlos Lyon, Simon Brading, Eva Torrella</span>
                                 <br>
                             <!-- <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p>
