--- a/films/ark.html
+++ b/films/ark.html
@@ -36,14 +36,14 @@
             <div class="slider-desc-content"> 
                 <span class="slider-title">ARK Part I: The Trustfall</span>
                 <p class="slider-text">
-                    A young couple is trying to repair their relationship, while the mother is going through postpartum depression, slowly turning into psychosis.
+                    A special covert operation wing named as ARK (Agency for Reconnaissance and Kinetics) under the government has to race against time to rescue one woman who has invented a device named as NeuroCore, who is abducted by a private terrorist organisation in a city named as Kasbaq.
                 </p>
                 <br>
                 <span class ="slider-watch"><a target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo" src="../images/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo" src="../images/ltl.png" alt="FETEN" />
+                    <img  class="slider-logo" src="../images/logos 777777/ltl.png" alt="LTL" />
+                    <img  class="slider-logo" src="../images/logos 777777/escac.png" alt="ESCAC" />
                 </div>  
             </div>
                    
