--- a/films/ark.html
+++ b/films/ark.html
@@ -42,8 +42,8 @@
                 <span class ="slider-watch"><a target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo" src="../images/logos 777777/ltl.png" alt="LTL" />
-                    <img  class="slider-logo" src="../images/logos 777777/escac.png" alt="ESCAC" />
+                    <img  class="slider-logo slider-logo-ltl" src="../images/logos 5c5c5c/ltl.png" alt="LTL" />
+                    <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
                 </div>  
             </div>
                    
