--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div id="horizontal-container" class="horizontal-container">
 
             <div class="horizontal-slide horizontal-slide-photo">
-                <a class="info-link" data-fancybox href="https://www.youtube.com/embed/-AmjlRjMKsY?rel=0&showinfo=0&autoplay=1">
-                    <img src="./images/irreplacable/16.png" alt="IRREPLACEABLE">
+                <a class="info-link" href="./films/irreplaceable.html">
+                    <img src="./images/irreplacable/10.png" alt="IRREPLACEABLE">
                    
                     <div class="info-button">
                     </div>
@@ -86,7 +86,7 @@
             </div>  
             <div class="horizontal-slide horizontal-slide-photo">
                 <a class="info-link" href="./films/ark.html">
-                    <img src="./images/ARK/1.png" alt="Ark">
+                    <img src="./images/ARK/11.png" alt="Ark">
                    
                     <div class="info-button">
                     </div>
