changed font to montserrat. added stephens tale

--- a/films/ark.html
+++ b/films/ark.html
@@ -18,7 +18,7 @@
 </head>
 <body style="overflow-y: auto; overflow-x: hidden;">
     <nav id="navbar" class="navbar navbar-dark fixed-top">
-        <a class="navbar-brand" href="/"> Ivan Markovi<span class="navbar-brand-different-font">ć</span>
+        <a class="navbar-brand" href="/"> Ivan Marković
             <span class="job-title d-block d-md-inline letter-space">Cinematographer</span>
         </a>
 
@@ -39,7 +39,7 @@
                     A special covert operation wing named as ARK (Agency for Reconnaissance and Kinetics) under the government has to race against time to rescue one woman who has invented a device named as NeuroCore, who is abducted by a private terrorist organisation in a city named as Kasbaq.
                 </p>
                 <br>
-                <span class ="slider-watch"><a target="_blank" href="https://www.youtube.com/watch?v=x3fJezy1b24&ab_channel=IvanMarkovi%C4%87" class="text-lightgrey">WATCH HERE</a></span>
+                <span class ="text-lightgrey slider-watch">COMING SOON</span>
                 <br>
                 <div class="slider-logos">
                     <img  class="slider-logo slider-logo-ltl" src="../images/logos 5c5c5c/ltl.png" alt="LTL" />
