--- a/films/stephenstale.html
+++ b/films/stephenstale.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>IRREPLACEABLE</title>
+    <title>Stephen’s Tale</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,10 +34,9 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">IRREPLACEABLE</span>
+                <span class="slider-title">Stephen’s Tale</span>
                 <p class="slider-text">
-                    When John experiences sexual impotence with his rather cold, but attractive wife Anna, the fear of being replaced is starting to haunt him as it leads to obsessive worries about her potential infidelity with another man, an unfamiliar individual he starts repeatedly encountering.
-                </p>
+                    When Stephen discovers that the girl from his dreams not only exists but has gone missing, he risks his marriage and sanity by embarking on a search for the girl and the truth.                </p>
                 <br>
                 <span class ="text-lightgrey slider-watch">COMING SOON</span>
                 <br>
@@ -45,7 +44,6 @@
                     <img  class="slider-logo slider-logo-lightframers" src="../images/logos 5c5c5c/lightframers.png" alt="LIGHTFRAMERS" />
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
                     <img  class="slider-logo slider-logo-sae" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
-                    <img  class="slider-logo slider-logo-avisual" src="../images/logos 5c5c5c/avisual.png" alt="AVISUAL" />
                 </div>  
             </div>
                    
@@ -54,40 +52,40 @@
             <section class="slider_container">
                 <section class="slider-12">
                     <div class="slide">
-                        <img src="../images/irreplacable/1.png" alt="">
+                        <img src="../images/stephens_tale/1.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/2.png" alt="">
+                        <img src="../images/stephens_tale/2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/3.png" alt="">
+                        <img src="../images/stephens_tale/3.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/4.png" alt="">
+                        <img src="../images/stephens_tale/4.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/5.png" alt="">
+                        <img src="../images/stephens_tale/5.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/6.png" alt="">
+                        <img src="../images/stephens_tale/6.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/7.png" alt="">
+                        <img src="../images/stephens_tale/7.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/8.png" alt="">
+                        <img src="../images/stephens_tale/8.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/9.png" alt="">
+                        <img src="../images/stephens_tale/9.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/10.png" alt="">
+                        <img src="../images/stephens_tale/10.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/11.png" alt="">
+                        <img src="../images/stephens_tale/11.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/irreplacable/12.png" alt="">
+                        <img src="../images/stephens_tale/12.jpg" alt="">
                     </div>
                 </section>
             </section>
