--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <nav id="navbar" class="navbar navbar-dark fixed-top">
-        <a class="navbar-brand" href="/"> Ivan Markovi<span class="navbar-brand-different-font">ć</span>
+        <a class="navbar-brand" href="/"> Ivan Marković
             <span class="job-title d-block d-md-inline letter-space">Cinematographer</span>
         </a>
 
@@ -47,12 +47,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">IRREPLACEABLE</span>
+                                <span class="movie-title">IRREPLACEABLE</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Lucas Snijder  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Ugo Sin, Helena Gerez, Alex Tessi</span>
+                                <span class="letter-space show-hover">Lucas Snijder  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Ugo Sin, Helena Gerez, Alex Tessi</span>
                                 <br>
                             <!-- <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
@@ -71,12 +71,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">La Burbuja del Bebé</span>
+                                <span class="movie-title">La Burbuja del Bebé</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Ivan Markovic  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Chris Blane, Ugo Sin</span>
+                                <span class="letter-space show-hover">Ivan Marković  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Chris Blane, Ugo Sin</span>
                                 <br>
                            <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
@@ -95,12 +95,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">ARK</span>
+                                <span class="movie-title">ARK</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Jaynit Parmar  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Carlos Lyon, Simon Brading, Eva Torrella</span>
+                                <span class="letter-space show-hover">Jaynit Parmar  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Carlos Lyon, Simon Brading, Eva Torrella</span>
                                 <br>
                             <!-- <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p>
@@ -110,7 +110,7 @@
                 
             </div>  
             <div class="horizontal-slide horizontal-slide-photo">
-                <a class="info-link" data-fancybox href="https://www.youtube.com/embed/-AmjlRjMKsY?rel=0&showinfo=0&autoplay=1">
+                <a class="info-link" href="./films/stephenstale.html">
                     <img src="./images/stephens_tale/4.jpg" alt="Stephen's Tale">
                    
                     <div class="info-button">
@@ -120,12 +120,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Stephen's Tale</span>
+                                <span class="movie-title">Stephen's Tale</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Lucas Snijder  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Danil Hoek, Monika Valkunaite, Vesna Kuzmic</span>
+                                <span class="letter-space show-hover">Lucas Snijder  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Danil Hoek, Monika Valkūnaitė, Vesna Kuzmić</span>
                                 <br>
                             <!-- <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p>
@@ -145,12 +145,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">A Hazardous Joy</span>
+                                <span class="movie-title">A Hazardous Joy</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Dziuginta Gabriele Radaviciute  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Sara Rojo, Francesco Grumetti</span>
+                                <span class="letter-space show-hover">Džiuginta Gabrielė Radavičiūtė  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Sara Rojo, Francesco Grumetti</span>
                                 <br>
                             <!-- <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p>
@@ -169,12 +169,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Compañeros de Piso</span>
+                                <span class="movie-title">Compañeros de Piso</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Ivan Markovic  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Mar López, Georg Hembach</span>
+                                <span class="letter-space show-hover">Ivan Marković  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Mar López, Georg Hembach</span>
                                 <br>
                            <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
@@ -194,12 +194,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Don't Go</span>
+                                <span class="movie-title">Don't Go</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Ivan Markovic  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Brando Di Placido, Anna Maria Spingola</span>
+                                <span class="letter-space show-hover">Ivan Marković  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Brando Di Placido, Anna Maria Spingola</span>
                                 <br>
                            <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
@@ -218,12 +218,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Ordinary People</span>
+                                <span class="movie-title">Ordinary People</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Ivan Markovic  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  María Garrido, Lluc Pallàs</span>
+                                <span class="letter-space show-hover">Ivan Marković  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  María Garrido, Lluc Pallàs</span>
                                 <br>
                            <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
@@ -242,12 +242,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Ein Einfaches Ereignis</span>
+                                <span class="movie-title">Ein Einfaches Ereignis</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Boris Hadzija  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Ivan Markovic, Achmed Kornaz</span>
+                                <span class="letter-space show-hover">Boris Hadžija  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Ivan Marković, Achmed Kornaz</span>
                                 <br>
                            <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
@@ -266,12 +266,12 @@
                     <div class="row no-gutters">
                         <div class="col-auto">
                             <p class="text-light mb-0 letter-space">
-                                <span class="font-weight-bold movie-title">Tea House - Terunobu Fujimori</span>
+                                <span class="movie-title">Tea House - Terunobu Fujimori</span>
                             </p>
                         </div>
                         <div class="col-md">
                             <p class="text-light mb-0 pl-0 pl-md-2">
-                                <span class="letter-space show-hover">Ben Tynegate  <strong class="ml-1 ml-md-1 text-lightgrey">Cast</strong>  Kingston University, The Barbican</span>
+                                <span class="letter-space show-hover">Ben Tynegate  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Kingston University, The Barbican</span>
                                 <br>
                            <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p>
