--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -18,7 +18,7 @@
 </head>
 <body style="overflow-y: auto; overflow-x: hidden;">
     <nav id="navbar" class="navbar navbar-dark fixed-top">
-        <a class="navbar-brand" href="/"> Ivan Markovi<span class="navbar-brand-different-font">ć</span>
+        <a class="navbar-brand" href="/"> Ivan Marković
             <span class="job-title d-block d-md-inline letter-space">Cinematographer</span>
         </a>
 
