added hazardous_joy and companerosdepiso

--- a/films/ahazardousjoy.html
+++ b/films/ahazardousjoy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
-    <title>Stephen’s Tale</title>
+    <title>A Hazardous Joy</title>
     <meta name="X-UA-Compatible" content="IE&#x3D;edge">
     <meta name="viewport" content="width&#x3D;device-width,&#x20;initial-scale&#x3D;1.0">
     <meta property="og&#x3A;type" content="website">
@@ -34,59 +34,45 @@
     <div class="row">
         <div class="slider-desc">
             <div class="slider-desc-content"> 
-                <span class="slider-title">Stephen’s Tale</span>
+                <span class="slider-title">A Hazardous Joy</span>
                 <p class="slider-text">
-                    When Stephen discovers that the girl from his dreams not only exists but has gone missing, he risks his marriage and sanity by embarking on a search for the girl and the truth.                
+                    Two students, who have just met at a party, decide to go back to his place. The night gets an interesting turn of events when she notices his unusual collection.                
                 </p>
                 <br>
-                <span class ="text-lightgrey slider-watch">COMING SOON</span>
+                <span class ="slider-watch"><a  target="_blank" href="https://www.youtube.com/watch?v=FVfG4yIJzR4" class="text-lightgrey">WATCH HERE</a></span>
                 <br>
                 <div class="slider-logos">
-                    <img  class="slider-logo slider-logo-lightframers" src="../images/logos 5c5c5c/lightframers.png" alt="LIGHTFRAMERS" />
                     <img  class="slider-logo slider-logo-escac" src="../images/logos 5c5c5c/escac.png" alt="ESCAC" />
-                    <img  class="slider-logo slider-logo-sae" src="../images/logos 5c5c5c/sae.png" alt="SAE" />
                 </div>  
             </div>
                    
         </div>      
         <div class="slider-content">
             <section class="slider_container">
-                <section class="slider-12">
+                <section class="slider-8">
                     <div class="slide">
-                        <img src="../images/stephens_tale/1.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/1.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/2.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/2.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/3.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/3.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/4.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/4.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/5.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/5.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/6.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/6.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/7.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/7.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../images/stephens_tale/8.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/stephens_tale/9.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/stephens_tale/10.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/stephens_tale/11.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="../images/stephens_tale/12.jpg" alt="">
+                        <img src="../images/a_hazardous_joy/8.jpg" alt="">
                     </div>
                 </section>
             </section>
