--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 
             </div>
             <div class="horizontal-slide horizontal-slide-photo">
-                <a class="info-link" data-fancybox href="https://www.youtube.com/embed/-AmjlRjMKsY?rel=0&showinfo=0&autoplay=1">
+                <a class="info-link" href="./films/dontgo.html">
                     <img src="./images/dont_go/5.png" alt="Don't Go">
                    
                     <div class="info-button">
@@ -201,7 +201,6 @@
                             <p class="text-light mb-0 pl-0 pl-md-2">
                                 <span class="letter-space show-hover">Ivan Marković  <span class="movie-cast ml-1 ml-md-1 text-lightgrey">Cast</span>  Brando Di Placido, Anna Maria Spingola</span>
                                 <br>
-                           <!--  <p class="media-description pl-0 pl-md-2 letter-space playfair-display song-title show-hover">"PESMICCAAAA"</p>-->
                             </p> 
                         </div>
                     </div>
