added cv, right menu sort of fixed for bigger screens

--- a/films/laburbujadelbebe.html
+++ b/films/laburbujadelbebe.html
@@ -104,15 +104,15 @@
                 <div class="col-sm-12">
                     <p class="text-bio job-title mb-4" style="text-align: justify;">
                         <p class="text-bio mb-1 job-title" style="text-align: justify;">
-                            Hello! My name is Ivan, a young architect who went on to study filmmaking at ESCAC in Barcelona, specializing in the field of cinematography.
+                            My name is Ivan, a young architect who went on to study film at ESCAC in Barcelona, specializing in the field of cinematography.
                         </p>                      
                         <p class="text-bio job-title mb-1 job-title" style="text-align: justify;">
-                            The "learning through making" ethos is something I have valued throughout my life. I was never afraid to try new things out, fail, see how they work, and try again with new, wider knowledge. Being a fast learner, while having an analytical mind with problem solving affinity, enables me to do a lot with little, which is a useful tool to have in limited time during shootings. Having studied architecture, I began to notice how it has given me understanding of light and material, and other unique sets of skills that take to tell a good story through strong and interesting visuals.
+                            The "learning through making" ethos is something I have valued throughout my life. I was never afraid to try new things out, fail, see how they work, and try again. Being a fast learner, while having an analytical mind with problem solving affinity, enables me to do a lot with little, which is a useful tool to have in limited time during shootings. Having studied architecture, I began to notice how it has given me understanding of light and material, and other sets of skills that take to tell a story through strong and interesting visuals.
                            
                         </p>                   
-                        <p class="text-bio job-title mb-4 job-title" style="text-align: justify;">
+                         <p class="text-bio job-title mb-4 job-title" style="text-align: justify;">
                             I am looking for inspiring projects that would stimulate my growth further into a cinematographer I endeavour to be. If you need any assistance with your projects, please feel free to contact me directly.
-                        </p>
+                        </p> 
                     </p>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                     <p class="text-bio job-title">
                         <span style="white-space: nowrap;">Email: <a class="text-bio text-lightgrey" href="mailto:ivanmarkovicfilm@gmail.com">ivanmarkovicfilm@gmail.com</a></span>
                         <span style="white-space: nowrap;">WhatsApp: <a class="text-bio text-lightgrey" href="mailto:+381631574669">+381 63 157 4669</a></span>
-                        <span style="white-space: nowrap;"><a href="" class="text-bio text-lightgrey">Download CV</a></span>
+                        <span style="white-space: nowrap;"><a href="../cv/ivanmarkovicfilm_CV.pdf" class="text-bio text-lightgrey">Download CV</a></span>
                     </p>
                 </div>
                 <div class="col-sm-6">
